Added route authentication

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -101,7 +101,7 @@
   position: relative;
 }
 .postCommentItem {
-  background: #eceffa;
+  background: #F3E5F5;
   border-radius: 4px;
   padding: 10px;
   margin-bottom: 14px;
