--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -4,6 +4,10 @@
   padding: 5px 20px;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0px 0px 20px 0px #6A1B9A;
+  position: sticky;
+  z-index: 1;
+  top: 0px;
 }
 .logo {
   height: 35px;
