--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -18,6 +18,7 @@
 }
 .postAvatar img {
   height: 40px;
+  border-radius: 4px;
 }
 .postAvatar .postAuthor {
   color: #616161;
@@ -149,8 +150,6 @@
   display: flex;
   width: 80%;
   margin: 0 auto;
-}
-.home .posts-list {
   flex-grow: 0.8;
 }
 .friendsList {
@@ -173,6 +172,7 @@
 }
 .friendsItem img {
   height: 40px;
+  border-radius: 4px;
 }
 .noFriends {
   display: flex;
@@ -198,7 +198,7 @@
   padding: 0 10px;
 }
 .postsList {
-  flex: 1;
+  flex-grow: .8;
 }
 
 /* Create Post */
