--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -18,6 +18,7 @@
 }
 .nav .userDp {
   height: 40px;
+  border-radius: 50%;
 }
 .nav .user {
   display: flex;
@@ -54,7 +55,7 @@
   cursor: pointer;
 }
 .searchContainer {
-  flex-grow: 0.5;
+  flex-grow: 0.3;
   /* padding: 0 20px; */
   position: relative;
   display: flex;
@@ -113,4 +114,5 @@
 }
 .searchResultsRow img {
   height: 27px;
+  border-radius: 4px;
 }
