--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -91,7 +91,8 @@
   border: 1px solid #e0e0e0;
   z-index: 100;
   max-height: 452px;
-  overflow: scroll;
+  overflow-y: auto;
+  box-sizing: border-box;
   /* display: none; */
 }
 .searchResults ul {
