--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 30%;
+  min-width: 350px;
   margin: 50px auto;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -42,10 +43,40 @@
   padding: 9px;
   border: none;
   outline: none;
+  font-weight: 500;
+}
+.field .google{
+  background-color: #fff;
+  border: 2px solid #FF7043;
+  color: #FF7043;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.google img{
+  height: 25px;
+  margin: 0 10px;
 }
 .field button:hover {
   cursor: pointer;
 }
 .field button:disabled {
   cursor: not-allowed;
+}
+.divider{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #616161;
+  position: relative;
+  width: 80%;
+  margin: 30px auto;
+}
+.divider>span{
+  position: absolute;
+  background-color: #fff;
+  color: #616161;
+  width: 20%;
+  font-weight: 500;
+  text-align: center;
 }
